# spartan-launcher

./: README.md  pom.xml
conf/: config.ini
examples/spartan-cfg-ex/: config.ini  mk-app-lnk.sh  pom.xml
examples/spartan-cfg-ex/conf/: config.properties
examples/spartan-cfg-ex/src/main/java/spartan_example/: App.java
examples/spartan-ex/: config.ini  mk-app-lnk.sh  pom.xml
examples/spartan-ex/src/main/java/spartan_example/: App.java  ReadLine.java
examples/spartan-react-ex/: config.ini  mk-app-lnk.sh  pom.xml
examples/spartan-react-ex/src/main/java/: module-info.java
examples/spartan-react-ex/src/main/java/spartan_react/: App.java
examples/spartan-watchdog-ex/: config.ini  mk-app-lnk.sh  pom.xml
examples/spartan-watchdog-ex/src/main/java/spartan_example/: App.java
src/main/assembly/: assembly.xml
src/main/cpp/: CMakeLists.txt  FifoPipeOutputStream.c  FifoPipeOutputStream.h  MIT-LICENSE.txt  StdOutCapture.cpp  StdOutCapture.h  bld-findfiles  cfgparse.cpp  cfgparse.h  createjvm.cpp  createjvm.h  echo-streams.cpp  echo-streams.h  fifo-pipe.cpp  fifo-pipe.h  findfiles.cpp  findfiles.h  format2str.cpp  format2str.h  ini.cpp  ini.h  jvm-pre-init.cpp  jvm-pre-init.h  launch-program.cpp  launch-program.h  log.cpp  log.h  main.cpp  memBufStream.cpp  memBufStream.h  mq-queue.cpp  mq-queue.h  open-anon-pipes.cpp  open-anon-pipes.h  path-concat.cpp  path-concat.h  process-cmd-dispatch-info.cpp  process-cmd-dispatch-info.h  read-multi-strm.cpp  read-multi-strm.h  (+22 more)
src/main/java/: FifoPipeInputStream.java  FifoPipeOutputStream.java  TestSpartan.java  module-info.java
src/main/java/spartan/: CommandDispatchInfo.java  LaunchProgram.java  Spartan.java  SpartanBase.java  SpartanSysLogAppender.java  test.java
src/main/java/spartan/annotations/: ChildWorkerCommand.java  SupervisorCommand.java  SupervisorMain.java
src/main/java/spartan/fstreams/: Flow.java
src/main/java/spartan/launcher/: LaunchProgram.java
src/main/java/spartan/util/: ByteArrayOutputStream.java  EnumAsStream.java
src/main/java/spartan/util/io/: ByteArrayOutputStream.java  Files.java  ReadLine.java
src/main/java/spartan_bootstrap/: SpartanBootStrap.java
src/main/java/spartan_startup/: CommandDispatchInfo.java
src/test/java/: Main.java
src/test/java/spartan/util/io/: FilesTest.java
test/: test
test/syslogger-test/: pom.xml
test/syslogger-test/conf/: logback.xml
test/syslogger-test/src/main/java/com/tideworks/test/: App.java
test/syslogger-test/test/: config.ini
